[gd_scene load_steps=2 format=2]

[ext_resource path="res://Weapons/Weapon_Element/BasicWeaponElement.gd" type="Script" id=1]

[node name="BasicWeaponElement" type="Area2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="Sprite" type="Sprite" parent="."]

[node name="Timer" type="Timer" parent="."]

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[connection signal="area_entered" from="." to="." method="_on_BasicWeaponElement_area"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
